Upgrade to Gradle 1.0-rc-3
Issue: SPR-9411